--- a/uc_lunar/uc_lunar.info.yml
+++ b/uc_lunar/uc_lunar.info.yml
@@ -1,6 +1,6 @@
 name: Ubercart Lunar
 type: module
-description: 'Provides a Lunar payment method for Ubercart.'
+description: 'Lunar Online Payments plugin for Ubercart 8.x-4.x'
 package: 'Ubercart - payment'
 version: 8.x-2.0
 core: 8.x
